# LiteStarTestProject

./: README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini
migrations/: env.py
migrations/versions/: 2547ab8ed633_create_users_table.py
scripts/: fill_db.py  run_alembic.py
scripts/data/: users.json
tests/: __init__.py  conftest.py  test_user.py
users_app/: main.py
users_app/controllers/: users_controller.py
users_app/database/: config.py
users_app/dto/: user.py
users_app/models/: user.py
users_app/repositories/: user_repository.py
